# ctool

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
src/: encoding.rs  error.rs  main.rs
