[package]
name = "ctool"
version = "0.1.0"
edition = "2021"
authors = ["Ziyun Luo <ziyun.luo@icloud.com>", "LemonHX <lemonhx@lemonhx.tech>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size


[dependencies]
clap = { version = "3.2", features = ["derive", "cargo"] }
data-encoding = "2.3"
urlencoding = "2.1"
anyhow = "1.0"
thiserror = "1.0"
